--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@svgr/webpack": "^8.1.0",
+    "@tabler/icons-react": "^3.12.0",
     "@tanstack/react-table": "^8.12.0",
-    "@uploadthing/react": "^6.2.2",
+    "@uploadthing/react": "^6.8.0",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -56,7 +58,7 @@
     "stripe": "^14.17.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.3.3",
+    "uploadthing": "^6.13.3",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
