--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^11.0.20",
     "googleapis": "^144.0.0",
+    "html-react-parser": "^5.2.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.321.0",
     "next": "14.0.4",
