--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "framer-motion": "^11.0.20",
     "googleapis": "^144.0.0",
     "html-react-parser": "^5.2.2",
+    "isomorphic-dompurify": "^2.21.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.321.0",
     "next": "14.0.4",
