--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^2.2.0",
     "@hello-pangea/dnd": "^16.5.0",
     "@hookform/resolvers": "^3.3.4",
+    "@monaco-editor/react": "^4.7.0",
     "@mux/mux-node": "^8.0.0",
     "@mux/mux-player-react": "^2.3.2",
     "@prisma/client": "^6.3.1",
